--- a/client/src/i18n/locales/ar.json
+++ b/client/src/i18n/locales/ar.json
@@ -1,5 +1,51 @@
 {
-    "greeting": "مرحبًا بك في عالمي.",
-    "projectCTA": "ابدأ مشروعًا"
+  "profile": {
+    "title": "عنّي",
+    "alt": "صورة ملف ماركوس إيلجي",
+    "nameLabel": "الاسم",
+    "positionLabel": "الوظيفة",
+    "position": "مؤسس ومطوّر lni.design",
+    "locationLabel": "الموقع",
+    "location": "كولونيا، ألمانيا",
+    "languagesLabel": "اللغات",
+    "languages": "الألمانية، الإنجليزية، التركية، الإسبانية (مستوى أساسي)",
+    "technologiesLabel": "التقنيات",
+    "technologies": "HTML، CSS، JS، React، Node.js، PostgreSQL، Supabase، PHP، Python",
+    "focusLabel": "التركيز",
+    "focus": "تطوير الويب، استراتيجيات العلامة التجارية، الأتمتة، تصميم الأعمال"
+  },
+  "inspiration": {
+    "title": "الإلهام",
+    "text": "أستمد إلهامي من التقاء التكنولوجيا والتصميم والاستراتيجية. بالنسبة لي، لا يتعلق الأمر بالمظهر الجمالي فقط، بل بأنظمة مدروسة تؤدي إلى نتائج حقيقية."
+  },
+  "skills": {
+    "title": "المهارات",
+    "stackLabel": "الأدوات والتقنيات",
+    "stack": "HTML، CSS، JavaScript، React، Node.js، Express، Vite، PostgreSQL، Supabase، Firebase، Laravel، Django",
+    "otherLabel": "مهارات إضافية",
+    "other": "تجربة المستخدم والتصميم، تطوير الهوية البصرية، استراتيجيات المحتوى، هندسة أنظمة CMS/CRM، الأتمتة",
+    "languagesLabel": "اللغات",
+    "languages": "الألمانية، الإنجليزية، التركية، الإسبانية (مستوى أساسي)"
+  },
+  "projects": {
+    "title": "المشاريع",
+    "lnidesign": "وكالة إبداعية دولية تركّز على التصميم وتقنية المعلومات وتنظيم الفعاليات. الأدوات: lni.models، lni.booking",
+    "chens29": "منصة بيع تيشيرتات – بسيطة وفعالة، مبنية باستخدام React وStripe",
+    "sheherazade": "منصة حجز متعددة اللغات لرحلات نهرية متوافقة مع الشريعة الإسلامية",
+    "tolearnlist": "منصة تعليمية تعتمد على الذكاء الاصطناعي ونظام معرفي مبني على الرسم البياني"
+  },
+  "philosophy": {
+    "title": "فلسفتي في الحياة",
+    "text": "أعمل بكفاءة وبدافع من الحلول وبأسلوب واضح. لا أعقّد الأمور – بل أبني أنظمة فعّالة. لا أرى نفسي كمقدّم خدمة، بل كشريك استراتيجي."
+  },
+  "vision": {
+    "title": "الرؤية والأهداف",
+    "text": "أطوّر أنظمة قابلة للتوسع وتقدّم قيمة حقيقية – ليس لمجرد اتباع الترند، بل لتحقيق تأثير دائم. التكنولوجيا وسيلة، أما الغاية فهي التأثير."
+  },
+  "cta": {
+    "title": "هل أنت مستعد لمشروعك القادم؟",
+    "text": "لنبتكر شيئًا رائعًا معًا.",
+    "button": "اطلب مشروعًا",
+    "github": "👉 تصفّح مشاريعي على GitHub"
   }
-  
+}
