Remove unused favicon, README, and script files; update localization files and add new CTA styles for improved user experience

--- a/client/src/i18n/locales/ar.json
+++ b/client/src/i18n/locales/ar.json
@@ -1,10 +1,10 @@
 {
   "profile": {
-    "title": "عنّي",
-    "alt": "صورة ملف ماركوس إيلجي",
+    "title": "نبذة عني",
+    "alt": "صورة الملف الشخصي لماركوس إيلجي",
     "nameLabel": "الاسم",
-    "positionLabel": "الوظيفة",
-    "position": "مؤسس ومطوّر lni.design",
+    "positionLabel": "المنصب",
+    "position": "مؤسس ومطور lni.design",
     "locationLabel": "الموقع",
     "location": "كولونيا، ألمانيا",
     "languagesLabel": "اللغات",
@@ -12,40 +12,42 @@
     "technologiesLabel": "التقنيات",
     "technologies": "HTML، CSS، JS، React، Node.js، PostgreSQL، Supabase، PHP، Python",
     "focusLabel": "التركيز",
-    "focus": "تطوير الويب، استراتيجيات العلامة التجارية، الأتمتة، تصميم الأعمال"
+    "focus": "تطوير الويب، استراتيجية العلامة التجارية، الأتمتة، تصميم الأعمال"
   },
   "inspiration": {
     "title": "الإلهام",
-    "text": "أستمد إلهامي من التقاء التكنولوجيا والتصميم والاستراتيجية. بالنسبة لي، لا يتعلق الأمر بالمظهر الجمالي فقط، بل بأنظمة مدروسة تؤدي إلى نتائج حقيقية."
+    "text": "أستمد إلهامي من التقاطع بين التكنولوجيا والتصميم والاستراتيجية. بالنسبة لي، لا يتعلق الأمر بالمظاهر الجذابة فحسب، بل يتعلق بأنظمة مدروسة تحقق نتائج فعلية."
   },
   "skills": {
     "title": "المهارات",
     "stackLabel": "الأدوات والتقنيات",
     "stack": "HTML، CSS، JavaScript، React، Node.js، Express، Vite، PostgreSQL، Supabase، Firebase، Laravel، Django",
-    "otherLabel": "مهارات إضافية",
-    "other": "تجربة المستخدم والتصميم، تطوير الهوية البصرية، استراتيجيات المحتوى، هندسة أنظمة CMS/CRM، الأتمتة",
+    "otherLabel": "مهارات أخرى",
+    "other": "تصميم واجهات المستخدم وتجربة المستخدم، تطوير الهوية البصرية، استراتيجية المحتوى، هندسة أنظمة إدارة المحتوى والعملاء، الأتمتة",
     "languagesLabel": "اللغات",
     "languages": "الألمانية، الإنجليزية، التركية، الإسبانية (مستوى أساسي)"
   },
   "projects": {
     "title": "المشاريع",
-    "lnidesign": "وكالة إبداعية دولية تركّز على التصميم وتقنية المعلومات وتنظيم الفعاليات. الأدوات: lni.models، lni.booking",
-    "chens29": "منصة بيع تيشيرتات – بسيطة وفعالة، مبنية باستخدام React وStripe",
-    "sheherazade": "منصة حجز متعددة اللغات لرحلات نهرية متوافقة مع الشريعة الإسلامية",
-    "tolearnlist": "منصة تعليمية تعتمد على الذكاء الاصطناعي ونظام معرفي مبني على الرسم البياني"
+    "lnidesign": "وكالة إبداعية دولية تركّز على التصميم وتكنولوجيا المعلومات وتنظيم الفعاليات. الأدوات: lni.models، lni.booking",
+    "chens29": "منصة بيع قمصان – بسيطة وفعّالة، مبنية باستخدام React و Stripe",
+    "sheherazade": "منصة حجز متعددة اللغات للرحلات النهرية المتوافقة مع الشريعة",
+    "tolearnlist": "منصة تعليمية مدعومة بالذكاء الاصطناعي تعتمد على نظام معرفة بياني"
   },
   "philosophy": {
     "title": "فلسفتي في الحياة",
-    "text": "أعمل بكفاءة وبدافع من الحلول وبأسلوب واضح. لا أعقّد الأمور – بل أبني أنظمة فعّالة. لا أرى نفسي كمقدّم خدمة، بل كشريك استراتيجي."
+    "text": "أعمل بكفاءة وتركيز ووضوح. لا مكان للمبالغة في التعقيد — فقط أنظمة تؤدي الغرض. لا أعتبر نفسي مزود خدمة بل شريك استراتيجي على قدم المساواة."
   },
   "vision": {
     "title": "الرؤية والأهداف",
-    "text": "أطوّر أنظمة قابلة للتوسع وتقدّم قيمة حقيقية – ليس لمجرد اتباع الترند، بل لتحقيق تأثير دائم. التكنولوجيا وسيلة، أما الغاية فهي التأثير."
+    "text": "أقوم بتطوير أنظمة قابلة للتوسع تحقق قيمة حقيقية — ليست لصيحات مؤقتة، بل لتأثير طويل الأمد. التكنولوجيا بالنسبة لي وسيلة، والغاية هي تحقيق نتائج ذات مغزى."
   },
   "cta": {
     "title": "هل أنت مستعد لمشروعك القادم؟",
-    "text": "لنبتكر شيئًا رائعًا معًا.",
+    "text": "لنصنع شيئًا رائعًا معًا.",
     "button": "اطلب مشروعًا",
-    "github": "👉 تصفّح مشاريعي على GitHub"
+    "github": "👉 استعرض مشاريعي على GitHub",
+    "whatsapp": "واتساب",
+    "call": "اتصل بي"
   }
 }
