--- a/client/src/i18n/locales/de.json
+++ b/client/src/i18n/locales/de.json
@@ -46,8 +46,8 @@
     "title": "Bereit für dein nächstes Projekt?",
     "text": "Lass uns gemeinsam etwas Großartiges starten.",
     "button": "Projekt anfragen",
-    "github": "👉 Meine Projekte auf GitHub ansehen"
+    "github": "👉 Meine Projekte auf GitHub ansehen",
+    "whatsapp": "WhatsApp",
+    "call": "Anrufen"
   }
 }
-
-  
