Add phone emoji to call text in localization files for better visibility

--- a/client/src/i18n/locales/ar.json
+++ b/client/src/i18n/locales/ar.json
@@ -48,6 +48,6 @@
     "button": "اطلب مشروعًا",
     "github": "👉 استعرض مشاريعي على GitHub",
     "whatsapp": "واتساب",
-    "call": "اتصل بي"
+    "call": "☎️ اتصل بي"
   }
 }
