--- a/client/src/i18n/locales/de.json
+++ b/client/src/i18n/locales/de.json
@@ -48,6 +48,6 @@
     "button": "Projekt anfragen",
     "github": "👉 Meine Projekte auf GitHub ansehen",
     "whatsapp": "WhatsApp",
-    "call": "Anrufen"
+    "call": "☎️ Anrufen"
   }
 }
