--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -48,6 +48,6 @@
     "button": "Request a project",
     "github": "👉 View my projects on GitHub",
     "whatsapp": "WhatsApp",
-    "call": "Call me"
+    "call": "☎️ Call me"
   }
 }
