--- a/client/src/i18n/locales/es.json
+++ b/client/src/i18n/locales/es.json
@@ -48,6 +48,6 @@
     "button": "Solicitar un proyecto",
     "github": "👉 Ver mis proyectos en GitHub",
     "whatsapp": "WhatsApp",
-    "call": "Llamar"
+    "call": "☎️ Llamar"
   }
 }
