--- a/client/src/i18n/locales/tr.json
+++ b/client/src/i18n/locales/tr.json
@@ -48,6 +48,6 @@
     "button": "Proje talep et",
     "github": "👉 GitHub projelerimi incele",
     "whatsapp": "WhatsApp",
-    "call": "Ara"
+    "call": "☎️ Ara"
   }
 }
