Add internationalization support to RegistryPanel and update German translations

--- a/client/src/i18n/locales/de.json
+++ b/client/src/i18n/locales/de.json
@@ -49,5 +49,9 @@
     "github": "👉 Meine Projekte auf GitHub ansehen",
     "whatsapp": "WhatsApp",
     "call": "☎️ Anrufen"
+  },
+  "register": {
+    "welcome": "Willkommen",
+    "subscribe": "Registriere dich"
   }
 }
