Add language label translation to RegistryPanel and update German locale

--- a/client/src/i18n/locales/de.json
+++ b/client/src/i18n/locales/de.json
@@ -52,6 +52,7 @@
   },
   "register": {
     "welcome": "Willkommen",
-    "subscribe": "Registriere dich"
+    "subscribe": "Registriere dich",
+    "language": "Sprache auswählen: "
   }
 }
