Add internationalization support to AuthForm and update German translations

--- a/client/src/i18n/locales/de.json
+++ b/client/src/i18n/locales/de.json
@@ -54,5 +54,14 @@
     "welcome": "Willkommen",
     "subscribe": "Registriere dich",
     "language": "Sprache auswählen: "
+  },
+  "auth-form": {
+    "email": "E-Mail",
+    "password": "Passwort",
+    "login": "Anmelden",
+    "register": "Registrieren",
+    "google": "Mit Google anmelden",
+    "or": "oder",
+    "github": "Mit GitHub anmelden",
   }
 }
