Fix formatting in German locale for GitHub login translation

--- a/client/src/i18n/locales/de.json
+++ b/client/src/i18n/locales/de.json
@@ -62,6 +62,6 @@
     "register": "Registrieren",
     "google": "Mit Google anmelden",
     "or": "oder",
-    "github": "Mit GitHub anmelden",
+    "github": "Mit GitHub anmelden"
   }
 }
