Add multilingual support for language selection and update translations

--- a/client/src/i18n/locales/de.json
+++ b/client/src/i18n/locales/de.json
@@ -63,5 +63,17 @@
     "google": "Mit Google anmelden",
     "or": "oder",
     "github": "Mit GitHub anmelden"
+  },
+  "lang": {
+    "de": "Deutsch",
+    "en": "Englisch",
+    "tr": "Türkisch",
+    "es": "Spanisch",
+    "fr": "Französisch",
+    "it": "Italienisch",
+    "ru": "Russisch",
+    "ar": "Arabisch",
+    "zh": "Chinesisch",
+    "ja": "Japanisch"
   }
 }
