--- a/client/src/i18n/locales/ar.json
+++ b/client/src/i18n/locales/ar.json
@@ -1,10 +1,10 @@
 {
   "profile": {
-    "title": "نبذة عني",
-    "alt": "صورة الملف الشخصي لماركوس إيلجي",
+    "title": "عنّي",
+    "alt": "صورة الملف الشخصي لماركوس إلجي",
     "nameLabel": "الاسم",
     "positionLabel": "المنصب",
-    "position": "مؤسس ومطور lni.design",
+    "position": "المؤسس والمطور لـ lni.design",
     "locationLabel": "الموقع",
     "location": "كولونيا، ألمانيا",
     "languagesLabel": "اللغات",
@@ -16,38 +16,64 @@
   },
   "inspiration": {
     "title": "الإلهام",
-    "text": "أستمد إلهامي من التقاطع بين التكنولوجيا والتصميم والاستراتيجية. بالنسبة لي، لا يتعلق الأمر بالمظاهر الجذابة فحسب، بل يتعلق بأنظمة مدروسة تحقق نتائج فعلية."
+    "text": "أستمد إلهامي من الترابط بين التكنولوجيا والتصميم والاستراتيجية. بالنسبة لي، الأمر لا يتعلق فقط بالواجهات الجميلة – بل بالأنظمة المدروسة التي تحقق النتائج."
   },
   "skills": {
     "title": "المهارات",
     "stackLabel": "الأدوات والتقنيات",
     "stack": "HTML، CSS، JavaScript، React، Node.js، Express، Vite، PostgreSQL، Supabase، Firebase، Laravel، Django",
     "otherLabel": "مهارات أخرى",
-    "other": "تصميم واجهات المستخدم وتجربة المستخدم، تطوير الهوية البصرية، استراتيجية المحتوى، هندسة أنظمة إدارة المحتوى والعملاء، الأتمتة",
+    "other": "تصميم UI/UX، تطوير الهوية البصرية، استراتيجية المحتوى، بنية CMS/CRM، الأتمتة",
     "languagesLabel": "اللغات",
     "languages": "الألمانية، الإنجليزية، التركية، الإسبانية (مستوى أساسي)"
   },
   "projects": {
     "title": "المشاريع",
-    "lnidesign": "وكالة إبداعية دولية تركّز على التصميم وتكنولوجيا المعلومات وتنظيم الفعاليات. الأدوات: lni.models، lni.booking",
-    "chens29": "منصة بيع قمصان – بسيطة وفعّالة، مبنية باستخدام React و Stripe",
-    "sheherazade": "منصة حجز متعددة اللغات للرحلات النهرية المتوافقة مع الشريعة",
-    "tolearnlist": "منصة تعليمية مدعومة بالذكاء الاصطناعي تعتمد على نظام معرفة بياني"
+    "lnidesign": "وكالة إبداعية دولية تركز على التصميم وتكنولوجيا المعلومات والفعاليات. الأدوات: lni.models، lni.booking",
+    "chens29": "منصة بيع قمصان – بسيطة وفعالة، مبنية باستخدام React + Stripe",
+    "sheherazade": "منصة حجز متعددة اللغات لرحلات بحرية متوافقة مع الشريعة",
+    "tolearnlist": "منصة تعليمية مدعومة بالذكاء الاصطناعي تستخدم نظام معرفة قائم على الرسم البياني"
   },
   "philosophy": {
     "title": "فلسفتي في الحياة",
-    "text": "أعمل بكفاءة وتركيز ووضوح. لا مكان للمبالغة في التعقيد — فقط أنظمة تؤدي الغرض. لا أعتبر نفسي مزود خدمة بل شريك استراتيجي على قدم المساواة."
+    "text": "أعمل بكفاءة وتركّز على الحلول وبأسلوب واضح. لا إفراط في التعقيد – فقط أنظمة فعالة. لا أرى نفسي كمزود خدمة، بل كشريك استراتيجي على قدم المساواة."
   },
   "vision": {
     "title": "الرؤية والأهداف",
-    "text": "أقوم بتطوير أنظمة قابلة للتوسع تحقق قيمة حقيقية — ليست لصيحات مؤقتة، بل لتأثير طويل الأمد. التكنولوجيا بالنسبة لي وسيلة، والغاية هي تحقيق نتائج ذات مغزى."
+    "text": "أطوّر أنظمة قابلة للتوسع تحقق قيمة حقيقية – ليست لأجل الاتجاهات، بل لفائدة طويلة الأمد. التكنولوجيا وسيلة لتحقيق غاية. والغاية هي التأثير."
   },
   "cta": {
-    "title": "هل أنت مستعد لمشروعك القادم؟",
-    "text": "لنصنع شيئًا رائعًا معًا.",
-    "button": "اطلب مشروعًا",
-    "github": "👉 استعرض مشاريعي على GitHub",
+    "title": "جاهز لمشروعك القادم؟",
+    "text": "دعنا نبدأ شيئًا رائعًا معًا.",
+    "button": "طلب مشروع",
+    "github": "👉 عرض مشاريعي على GitHub",
     "whatsapp": "واتساب",
-    "call": "☎️ اتصل بي"
+    "call": "☎️ اتصل"
+  },
+  "register": {
+    "welcome": "مرحبًا",
+    "subscribe": "سجّل الآن",
+    "language": "اختر اللغة:"
+  },
+  "auth-form": {
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "login": "تسجيل الدخول",
+    "register": "تسجيل",
+    "google": "تسجيل الدخول باستخدام Google",
+    "or": "أو",
+    "github": "تسجيل الدخول باستخدام GitHub"
+  },
+  "lang": {
+    "de": "ألمانية",
+    "en": "إنجليزية",
+    "tr": "تركية",
+    "es": "إسبانية",
+    "fr": "فرنسية",
+    "it": "إيطالية",
+    "ru": "روسية",
+    "ar": "عربية",
+    "zh": "صينية",
+    "ja": "يابانية"
   }
 }
