--- a/client/src/i18n/locales/en.json
+++ b/client/src/i18n/locales/en.json
@@ -16,7 +16,7 @@
   },
   "inspiration": {
     "title": "Inspiration",
-    "text": "I draw my inspiration from the intersection of technology, design, and strategy. For me, it’s not just about beautiful interfaces — it’s about well-thought-out systems that deliver results."
+    "text": "I draw my inspiration from the connection between technology, design, and strategy. For me, it's not just about beautiful interfaces – but about well-thought-out systems that deliver results."
   },
   "skills": {
     "title": "Skills",
@@ -29,25 +29,51 @@
   },
   "projects": {
     "title": "Projects",
-    "lnidesign": "International creative agency focusing on design, IT, and events. Tools: lni.models, lni.booking",
-    "chens29": "T-shirt sales platform – minimalist, efficient, built with React + Stripe",
+    "lnidesign": "International creative agency focused on design, IT, and events. Tools: lni.models, lni.booking",
+    "chens29": "T-shirt sales platform – minimalist, effective, built with React + Stripe",
     "sheherazade": "Multilingual booking platform for halal-compliant river cruises",
-    "tolearnlist": "AI-based learning platform with a graph-driven knowledge system"
+    "tolearnlist": "AI-based learning platform with a graph-based knowledge system"
   },
   "philosophy": {
-    "title": "Philosophy",
-    "text": "I work efficiently, solution-oriented, and with clear direction. No overengineering — only systems that work. I don’t see myself as a service provider, but as a strategic partner at eye level."
+    "title": "Life Philosophy",
+    "text": "I work efficiently, solution-oriented, and with a clear line. No overengineering – just systems that work. I don't see myself as a service provider, but as a strategic partner on equal footing."
   },
   "vision": {
-    "title": "Vision & Goals",
-    "text": "I develop scalable systems that create real value — not trendy gimmicks, but sustainable impact. For me, technology is a tool. The goal is creating results that matter."
+    "title": "Visions & Goals",
+    "text": "I develop scalable systems that create real value – not for trends, but for long-term benefit. Technology is a means to an end. The end is impact."
   },
   "cta": {
     "title": "Ready for your next project?",
-    "text": "Let’s create something great together.",
-    "button": "Request a project",
+    "text": "Let’s build something great together.",
+    "button": "Request project",
     "github": "👉 View my projects on GitHub",
     "whatsapp": "WhatsApp",
-    "call": "☎️ Call me"
+    "call": "☎️ Call"
+  },
+  "register": {
+    "welcome": "Welcome",
+    "subscribe": "Sign up",
+    "language": "Select language: "
+  },
+  "auth-form": {
+    "email": "Email",
+    "password": "Password",
+    "login": "Login",
+    "register": "Register",
+    "google": "Sign in with Google",
+    "or": "or",
+    "github": "Sign in with GitHub"
+  },
+  "lang": {
+    "de": "German",
+    "en": "English",
+    "tr": "Turkish",
+    "es": "Spanish",
+    "fr": "French",
+    "it": "Italian",
+    "ru": "Russian",
+    "ar": "Arabic",
+    "zh": "Chinese",
+    "ja": "Japanese"
   }
 }
